@@ -1,0 +1,68 @@
+0000 "Command"
+0002 "Meta Elements"
+0004 "Directory"
+0008 "Identifing"
+0010 "Patient"
+0012 "Clinical Trial"
+0018 "Acquisition"
+0020 "Relationship"
+0028 "Image Presentaion"
+0032 "Study"
+0038 "Visit"
+003a "Waveform"
+0040 "Procedure"
+0050 "Device"
+0054 "Nuclear Medicine"
+0060 "???"
+0070 "???"
+0088 "???"
+0100 "???"
+0400 "???"
+2000 "BFS"
+2010 "BFB"
+2020 "BAB"
+2040 "IOB"
+2100 "Print Job"
+2110 "Printer"
+3002 "Radio Therapy"
+3004 "DVH"
+3006 "SSET"
+300a "RT"
+300b "RT"
+300c "???"
+300e "Review"
+4000 "Text"
+4008 "Results"
+5000 "Curves"
+5002 "Curves"
+5004 "Curves"
+5006 "Curves"
+5008 "Curves"
+500a "Curves"
+500c "Curves"
+500e "Curves"
+5010 "Curves"
+5012 "Curves"
+5014 "Curves"
+5016 "Curves"
+5018 "Curves"
+501a "Curves"
+501c "Curves"
+501e "Curves"
+6000 "Overlays"
+6002 "Overlays"
+6004 "Overlays"
+6006 "Overlays"
+6008 "Overlays"
+600a "Overlays"
+600c "Overlays"
+600e "Overlays"
+6010 "Overlays"
+6012 "Overlays"
+6014 "Overlays"
+6016 "Overlays"
+6018 "Overlays"
+601a "Overlays"
+601c "Overlays"
+601e "Overlays"
+7fe0 "Pixels"
