@@ -1,19 +1,19 @@
 /*=========================================================================
-                                                                                
+
   Program:   gdcm
   Module:    $RCSfile: gdcmDefaultDicts.cxx.in,v $
   Language:  C++
-  Date:      $Date: 2005/02/09 21:37:11 $
-  Version:   $Revision: 1.8 $
-                                                                                
+  Date:      $Date: 2005/04/05 10:56:25 $
+  Version:   $Revision: 1.9 $
+
   Copyright (c) CREATIS (Centre de Recherche et d'Applications en Traitement de
   l'Image). All rights reserved. See Doc/License.txt or
   http://www.creatis.insa-lyon.fr/Public/Gdcm/License.html for details.
-                                                                                
+
      This software is distributed WITHOUT ANY WARRANTY; without even
      the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR
      PURPOSE.  See the above copyright notices for more information.
-                                                                                
+
 =========================================================================*/
 
 #ifndef GDCMDEFAULTDICTS_H
@@ -23,6 +23,7 @@
 #include "gdcmDictEntry.h"
 #include "gdcmTS.h"
 #include "gdcmVR.h"
+#include "gdcmDictGroupName.h"
 #include "gdcmDicomDirElement.h"
 
 namespace gdcm
@@ -53,14 +54,19 @@ void FillDefaultDataDict(Dict *d)
    }
 }
 
-void FillDefaultTSDict(TSHT & ts)
+void FillDefaultTSDict(TSHT &ts)
 {
 @DICOM_TS_DICTIONARY@
 }
 
-void FillDefaultVRDict(VRHT & vr)
+void FillDefaultVRDict(VRHT &vr)
 {
 @DICOM_VR_DICTIONARY@
+}
+
+void FillDefaultDictGroupName(DictGroupNameHT &groupName)
+{
+@DICT_GROUP_NAME_DICTIONARY@
 }
 
 typedef struct
